--- a/#source/_topBanner.scss
+++ b/#source/_topBanner.scss
@@ -1,17 +1,20 @@
-.topBanner {
+@import "variables";
+
+.hero {
   display: flex;
-  width: 100%;
+  align-items: center;
   height: 708px;
-  background-image: url(/assets/img/top-banner.jpg);
+
+  background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-repeat: no-repeat;
 
   &__content {
-    align-self: center;
-    max-width: 550px;
-    margin-left: 150px;
-    color: #FFFFFF;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    max-width: 532px;
+    color: $white;
 
   }
 
@@ -31,20 +34,15 @@
     letter-spacing: 0.6px;
   }
 
-  &__button {
-    display: inline-block;
-    background: #005BFF;
-    border-radius: 8px;
-    padding: 22px 27px;
-    color: #FFFFFF;
-    font-size: 22px;
-    line-height: 20px;
-    letter-spacing: 0.7px;
-    text-decoration: none;
-    transition: all .3s ease;
+  &--main {
+    justify-content: flex-start;
+    padding-left: 150px;
+    background-image: url(/assets/img/hero-main.jpg);
+  }
 
-    &:hover {
-      background: #004cd7;
-    }
+  &--second {
+    justify-content: flex-end;
+    padding-right: 206px;
+    background-image: url(/assets/img/hero-second.jpg);
   }
 }
