--- a/#source/main.scss
+++ b/#source/main.scss
@@ -1,9 +1,16 @@
 @import "normalize";
+@import "font";
+@import "variables";
+@import "mixins";
 @import "header";
 @import "topBanner";
-@import "font";
+@import "courses";
+@import "advantages";
 
-*{margin:0;padding:0;}
+* {
+  margin: 0;
+  padding: 0;
+}
 
 .mainWrapper {
   width: 100%;
@@ -13,14 +20,39 @@
   display: grid;
   grid-template-areas:
     '. header .'
-    '. main .';
+    '. main .'
+    '. footer .';
   grid-template-columns: 92px 1fr 92px;
 
   font-family: 'OpenSans-Regular', sans-serif;
   font-size: 16px;
-  color: #001A34;
+  color: $dark-space;
 }
 
 .main {
   grid-area: main;
+}
+
+.title {
+  text-align: center;
+  font-size: 46px;
+  line-height: 54px;
+  letter-spacing: 0.8px;
+}
+
+.button {
+  display: inline-block;
+  background: $ozon-blue;
+  border-radius: 8px;
+  padding: 22px 27px;
+  color: $white;
+  font-size: 22px;
+  line-height: 20px;
+  letter-spacing: 0.7px;
+  text-decoration: none;
+  transition: $buton-transition;
+
+  &:hover {
+    background: $ozon-blue-hover;
+  }
 }
