refactored HW_lesson-7

--- a/#source/_courses.scss
+++ b/#source/_courses.scss
@@ -1,3 +1,6 @@
+@import "variables";
+@import "mixins";
+
 .courses {
   margin: 80px 0;
 
@@ -23,15 +26,15 @@
       @include bgImage;
 
       &-business {
-        background-image: url(/assets/img/courses-business.jpg);
+        background-image: url(../img/courses-business.jpg);
       }
 
       &-python {
-        background-image: url(/assets/img/courses-python.jpg);
+        background-image: url(../img/courses-python.jpg);
       }
 
       &-frontend {
-        background-image: url(/assets/img/courses-frontend.jpg);
+        background-image: url(../img/courses-frontend.jpg);
       }
     }
 
