--- a/#source/_header.scss
+++ b/#source/_header.scss
@@ -33,7 +33,7 @@
       left: 0;
       right: 0;
       margin: auto;
-      width: 0%;
+      width: 0;
       content: '.';
       color: transparent;
       background: $dark-space;
