--- a/#source/_advantages.scss
+++ b/#source/_advantages.scss
@@ -1,3 +1,6 @@
+@import "variables";
+@import "mixins";
+
 .advantages {
   margin: 80px 0;
 
@@ -15,19 +18,19 @@
       background-size: auto;
 
       &-leader {
-        background-image: url(/assets/img/advantages-leader.svg);
+        background-image: url(../img/advantages-leader.svg);
       }
 
       &-expert {
-        background-image: url(/assets/img/advantages-expert.svg);
+        background-image: url(../img/advantages-expert.svg);
       }
 
       &-relevance {
-        background-image: url(/assets/img/advantages-relevance.svg);
+        background-image: url(../img/advantages-relevance.svg);
       }
 
       &-curator {
-        background-image: url(/assets/img/advantages-leader.svg);
+        background-image: url(../img/advantages-leader.svg);
       }
     }
 
