--- a/#source/_advantages.scss
+++ b/#source/_advantages.scss
@@ -30,7 +30,7 @@
       }
 
       &-curator {
-        background-image: url(../img/advantages-leader.svg);
+        background-image: url(../img/advantages-kurator.svg);
       }
     }
 
