--- a/#source/_hero.scss
+++ b/#source/_hero.scss
@@ -5,12 +5,7 @@
   display: flex;
   align-items: center;
   height: 708px;
-
   @include bgImage;
-
-  //background-repeat: no-repeat;
-  //background-position: center;
-  //background-size: cover;
 
   &__content {
     display: flex;
@@ -26,6 +21,8 @@
     font-size: 58px;
     line-height: 68px;
     letter-spacing: 1px;
+
+    text-shadow: $ts-onWhite-title;
   }
 
   &__subtitle {
@@ -35,6 +32,8 @@
     font-size: 24px;
     line-height: 32px;
     letter-spacing: 0.6px;
+
+    text-shadow: $ts-onWhite;
   }
 
   &--main {
