--- a/#source/_header.scss
+++ b/#source/_header.scss
@@ -7,6 +7,11 @@
   align-items: center;
   min-height: 124px;
 
+  &__mainLogo {
+    width: 181px;
+    height: 58px;
+  }
+
   &__navigation {
     max-width: 520px;
     width: 100%;
@@ -25,7 +30,7 @@
     line-height: 20px;
     letter-spacing: 0.6px;
     text-decoration: none;
-    color: $dark-space;
+    color: $dark-space100;
 
     &::after {
       position: absolute;
@@ -36,7 +41,7 @@
       width: 0;
       content: '.';
       color: transparent;
-      background: $dark-space;
+      background: $dark-space100;
       height: 1px;
     }
 
