--- a/#source/_variables.scss
+++ b/#source/_variables.scss
@@ -1,7 +1,25 @@
-$dark-space: #001A34;
+$dark-space10: #EFF3F6;
+$dark-space20: #E9EEF1;
+$dark-space30: #DEE5EA;
+$dark-space40: #CCD4DB;
+$dark-space50: #B2BAC2;
+$dark-space70: #667585;
 $dark-space80: #33475C;
+$dark-space90: #1A3047;
+$dark-space100: #001A34;
 $white: #fff;
-$ozon-blue: #005BFF;
-$ozon-blue-hover: #004cd7;
-$buton-transition: all .3s ease;
+$ozon-blue10: #E0EBFF;
+$ozon-blue100: #005BFF;
+$hover-blue: #0051E4;
+$pressed-blue: #0041B8;
+$ozon-magenta100: #F81155;
+$ts-onWhite-title:
+    -1px -1px 1px rgba(255, 255, 255, .1),
+    1px 1px 3px rgba(0, 0, 0, 0.2),
+    2px 2px 5px rgba(206, 89, 55, 0);
+$ts-onWhite:
+    -1px -1px 1px rgba(255, 255, 255, .1),
+    1px 1px 2px rgba(0, 0, 0, 0.3),
+    2px 2px 5px rgba(206, 89, 55, 0);
+$button-transition: all .3s ease;
 $links-transition: all .15s ease;
