--- a/#source/main.scss
+++ b/#source/main.scss
@@ -1,58 +1,57 @@
 @import "normalize";
+@import "common";
 @import "font";
 @import "variables";
 @import "mixins";
 @import "header";
-@import "topBanner";
+@import "hero";
 @import "courses";
 @import "advantages";
+@import "request";
+@import "footer";
 
 * {
   margin: 0;
   padding: 0;
+  border: 0;
+}
+
+*,
+*:before,
+*:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+:focus,
+:active {
+  outline: none;
+}
+
+a:focus,
+a:active {
+  outline: none;
 }
 
 .mainWrapper {
-  width: 100%;
-  max-width: 1600px;
-  margin: 0 auto;
-
   display: grid;
   grid-template-areas:
-    '. header .'
-    '. main .'
-    '. footer .';
-  grid-template-columns: 92px 1fr 92px;
+    'header'
+    'main'
+    'request'
+    'footer';
+  grid-template-columns: 1fr;
 
   font-family: 'OpenSans-Regular', sans-serif;
   font-size: 16px;
-  color: $dark-space;
+  color: $dark-space100;
+}
+
+.center {
+  padding: 0 calc(50% - 708px);
 }
 
 .main {
   grid-area: main;
-}
-
-.title {
-  text-align: center;
-  font-size: 46px;
-  line-height: 54px;
-  letter-spacing: 0.8px;
-}
-
-.button {
-  display: inline-block;
-  background: $ozon-blue;
-  border-radius: 8px;
-  padding: 22px 27px;
-  color: $white;
-  font-size: 22px;
-  line-height: 20px;
-  letter-spacing: 0.7px;
-  text-decoration: none;
-  transition: $buton-transition;
-
-  &:hover {
-    background: $ozon-blue-hover;
-  }
 }
