--- a/#source/_footer.scss
+++ b/#source/_footer.scss
@@ -3,14 +3,24 @@
 
 .footer {
   grid-area: footer;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  min-height: 220px;
+
+  &--body {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 220px;
+  }
 
   &__mainLogo {
     width: 181px;
     height: 58px;
+  }
+
+  &__tagline {
+    display: none;
+    font-size: 22px;
+    line-height: 26px;
+    letter-spacing: 0.6px;
   }
 
   &__info {
