--- a/#source/_advantages.scss
+++ b/#source/_advantages.scss
@@ -2,7 +2,8 @@
 @import "mixins";
 
 .advantages {
-  margin: 80px 0;
+  margin-top: 80px;
+  margin-bottom: 80px;
 
   &__box {
     margin-top: 64px;
