--- a/#source/_common.scss
+++ b/#source/_common.scss
@@ -14,6 +14,7 @@
   border-radius: 8px;
   background: $ozon-blue100;
   color: $white;
+  text-align: center;
   font-size: 22px;
   line-height: 20px;
   letter-spacing: 0.7px;
