--- a/#source/_courses.scss
+++ b/#source/_courses.scss
@@ -43,6 +43,7 @@
     &-itemInfo {
       display: flex;
       flex-direction: column;
+      align-items: flex-start;
       flex-grow: 1;
       padding: 32px 24px;
 
