--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -470,6 +470,7 @@ template {
 .courses__box-itemInfo {
 	display: flex;
 	flex-direction: column;
+	align-items: flex-start;
 	flex-grow: 1;
 	padding: 32px 24px;
 }
